--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   cached_network_image: ^3.3.1
   flutter_secure_storage: ^9.2.0
   freezed_annotation: ^2.4.1
+  shared_preferences: ^2.3.1
 
 dev_dependencies:
   flutter_test:
